# perfomance_tips

./: CMakeLists.txt  CMakePresets.json
libs_speed/: CMakeLists.txt  main.cpp  newton_method.cpp  newton_method.h
